--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -1,37 +1,81 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 80px;
     padding: 80px;
     box-sizing: border-box;
     height: 300px;
-    background-repeat: repeat;
-    background-size: cover;
-    background-image: url("../img/banner.png");
+    background-color: #333;
     min-height: 100vh;
 }
 
 header {
-    background-color: #122879;
-    color: #ffffff;
-    padding: 1rem 0;
-    text-align: center;
+    background-color: #FFC75E;
+    color: white;
+    padding: 1em 0;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
-
-main {
-    padding: 2rem;
-    flex: 1;
-    max-width: 800px;
-    margin: auto;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(6, 30, 166, 0.989);
-}
-
+  
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-right: auto; 
+    animation: slideIn 1s ease-out;
+  }
+  
+  nav ul li {
+    margin: 0 15px;
+  }
+  
+  nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    position: relative;
+  }
+  
+  nav ul li a::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -5px;
+    left: 0;
+    background-color: #FFC75E;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  nav ul li a:hover::before {
+    visibility: visible;
+    width: 100%;
+  }
+  
+  .btn-download {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    margin-left: auto; 
+  }
+  
+  .btn-download:hover {
+    background-color: #FFC75E;
+  }
+  
 #contact form {
     display: flex;
     flex-direction: column;
