--- a/assets/SCSS/portfolio.css
+++ b/assets/SCSS/portfolio.css
@@ -11,6 +11,74 @@ body {
 }
 
 header {
+  background-color: #333;
+  color: white;
+  padding: 1em 0;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  margin-right: auto;
+  animation: slideIn 1s ease-out;
+}
+
+nav ul li {
+  margin: 0 15px;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  position: relative;
+}
+
+nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -5px;
+  left: 0;
+  background-color: #FFC75E;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+nav ul li a:hover::before {
+  visibility: visible;
+  width: 100%;
+}
+
+.btn-download {
+  background-color: #FFC75E;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+  margin-left: auto; /* Aggiunto per spostare il pulsante a destra */
+}
+
+.btn-download:hover {
+  background-color: #FFC75E;
+}
+
+header {
   text-align: center;
   margin-bottom: 20px;
 }
