--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -1,51 +1,59 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 80px;
-    padding: 80px;
+    padding-top: 80px;
     box-sizing: border-box;
     height: 300px;
-    background-color: #333;
+    background-repeat: repeat;
+    background-size: cover;
+    background-image: url("../img/banner.png");
     min-height: 100vh;
 }
 
 header {
-    background-color: #FFC75E;
+    background-color: #333;
     color: white;
-    padding: 1em 0;
-    position: sticky;
+    padding: 1em; /* Modificato per essere uniforme */
+    position: fixed;
     top: 0;
+    left: 0; /* Aggiunto per allineare a sinistra */
     width: 100%;
     z-index: 1000;
 }
-  
-  nav {
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  nav ul {
+}
+
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
-    margin-right: auto; 
+    margin-right: auto; /* Aggiunto per spostare il pulsante a destra */
     animation: slideIn 1s ease-out;
-  }
-  
-  nav ul li {
+}
+
+nav ul li {
     margin: 0 15px;
-  }
-  
-  nav ul li a {
+}
+
+nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
     position: relative;
-  }
-  
-  nav ul li a::before {
-    content: "";
+}
+
+nav ul li a::before {
+    content: '';
     position: absolute;
     width: 0;
     height: 2px;
@@ -54,28 +62,38 @@ header {
     background-color: #FFC75E;
     visibility: hidden;
     transition: all 0.3s ease-in-out;
-  }
-  
-  nav ul li a:hover::before {
+}
+
+nav ul li a:hover::before {
     visibility: visible;
     width: 100%;
-  }
-  
-  .btn-download {
-    background-color: #333;
+}
+
+.btn-download {
+    background-color: #FFC75E;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
     transition: background-color 0.3s ease;
-    margin-left: auto; 
-  }
-  
-  .btn-download:hover {
+    margin-left: auto; /* Aggiunto per spostare il pulsante a destra */
+    margin-right: 20px;
+}
+
+.btn-download:hover {
     background-color: #FFC75E;
-  }
-  
+}
+
+main {
+    padding: 2rem;
+    flex: 1;
+    max-width: 800px;
+    margin: auto;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(6, 30, 166, 0.989);
+}
+
 #contact form {
     display: flex;
     flex-direction: column;
