--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -1,3 +1,7 @@
+$primary-color: #FFC75E;
+$header-bg-color: #333;
+$text-color: white;
+
 * {
   margin: 0;
   padding: 0;
@@ -6,85 +10,94 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #FFC75E;
+  background-color: $primary-color;
   padding: 20px;
+
+  @media screen and (max-width: 1200px) {
+    padding: 15px;
+  }
+  
+  @media screen and (max-width: 992px) {
+    padding: 10px;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 5px;
+  }
 }
 
 header {
-  background-color: #333;
-  color: white;
+  background-color: $header-bg-color;
+  color: $text-color;
   padding: 1em 0;
   position: sticky;
   top: 0;
   width: 100%;
   z-index: 1000;
+  text-align: center;
+  margin-bottom: 20px;
+
+  h1.special-font {
+    font-family: "Roboto Slab", serif;
+  }
 }
 
 nav {
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  margin-right: auto;
-  animation: slideIn 1s ease-out;
-}
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-right: auto;
+    animation: slideIn 1s ease-out;
 
-nav ul li {
-  margin: 0 15px;
-}
+    li {
+      margin: 0 15px;
 
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  position: relative;
-}
+      a {
+        color: $text-color;
+        text-decoration: none;
+        font-weight: bold;
+        position: relative;
 
-nav ul li a::before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: -5px;
-  left: 0;
-  background-color: #ff6347;
-  visibility: hidden;
-  transition: all 0.3s ease-in-out;
-}
+        &::before {
+          content: "";
+          position: absolute;
+          width: 0;
+          height: 2px;
+          bottom: -5px;
+          left: 0;
+          background-color: $primary-color;
+          visibility: hidden;
+          transition: all 0.3s ease-in-out;
+        }
 
-nav ul li a:hover::before {
-  visibility: visible;
-  width: 100%;
+        &:hover::before {
+          visibility: visible;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 .btn-download {
-  background-color: #ff6347;
-  color: white;
+  background-color: $primary-color;
+  color: $text-color;
   padding: 10px 20px;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
   transition: background-color 0.3s ease;
-  margin-left: auto; /* Aggiunto per spostare il pulsante a destra */
-}
+  margin-left: auto;
+  margin-right: 20px;
 
-.btn-download:hover {
-  background-color: #e55347;
-}
-
-
-header {
-  text-align: center;
-  margin-bottom: 20px;
-
-  h1.special-font {
-    font-family: 'Roboto Slab', serif;
+  &:hover {
+    background-color: $primary-color;
   }
 }
 
@@ -102,7 +115,7 @@ header {
       display: inline;
 
       a {
-        color: #333;
+        color: $header-bg-color;
         font-size: 30px;
         transition: color 0.3s ease;
 
@@ -121,13 +134,25 @@ h1 {
 p {
   font-size: 20px;
   margin-top: 20px;
+
+  @media screen and (max-width: 992px) {
+    font-size: 18px;
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 16px;
+  }
+
+  @media screen and (max-width: 576px) {
+    font-size: 14px;
+  }
 }
 
 .container {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #ffffff30;
+  background-color: rgba(255, 255, 255, 0.1882352941);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -149,78 +174,31 @@ p {
       img {
         max-width: 100%;
         border-radius: 10px;
+
+        @media screen and (max-width: 1200px) {
+          border-radius: 8px;
+        }
       }
     }
+  }
+
+  @media screen and (max-width: 1200px) {
+    gap: 15px;
+    padding: 15px;
+  }
+
+  @media screen and (max-width: 992px) {
+    gap: 10px;
+    padding: 10px;
+  }
+
+  @media screen and (max-width: 768px) {
+    gap: 5px;
+    padding: 5px;
   }
 }
 
 footer {
   text-align: center;
   margin-top: 20px;
-}
-
-@media screen and (max-width: 1200px) {
-  body {
-    padding: 15px;
-  }
-
-  .container {
-    gap: 15px;
-    padding: 15px;
-
-    .hotel-image img {
-      border-radius: 8px;
-    }
-  }
-}
-
-@media screen and (max-width: 992px) {
-  body {
-    padding: 10px;
-  }
-
-  .container {
-    gap: 10px;
-    padding: 10px;
-  }
-
-  p {
-    font-size: 18px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .item {
-    flex-direction: column;
-  }
-
-  body {
-    padding: 5px;
-  }
-
-  .container {
-    gap: 5px;
-    padding: 5px;
-  }
-
-  p {
-    font-size: 16px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .social-links {
-    ul {
-      flex-direction: column;
-      gap: 15px;
-
-      a {
-        font-size: 25px;
-      }
-    }
-  }
-
-  p {
-    font-size: 14px;
-  }
 }
