--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -67,7 +67,6 @@ nav ul li a:hover::before {
     font-weight: bold;
     transition: background-color 0.3s ease;
     margin-left: 20px;
-    margin-right: 20px;
 }
 
 .btn-download:hover {
@@ -165,15 +164,13 @@ p {
 
 .skills-container {
     display: flex;
-    flex-wrap: wrap; /* Permette il wrapping su più righe */
     justify-content: center;
-    overflow: hidden;
-    position: relative;
+    overflow-x: auto; /* Permette lo scorrimento orizzontale */
     width: 100%;
 }
 
 .skill-item {
-    min-width: 150px; /* Ridotto per adattarsi meglio su schermi piccoli */
+    min-width: 150px; /* Mantieni questa larghezza per ogni skill */
     margin: 10px; /* Margine per distanziare gli elementi */
 }
 
@@ -207,14 +204,13 @@ p {
     display: flex;
     justify-content: center;
     gap: 20px; /* Spazio tra le icone social */
-    flex-wrap: wrap; /* Permette il wrapping su più righe */
+    overflow-x: auto; /* Permette lo scorrimento orizzontale */
 }
 
 .social-icon {
     display: inline-block;
     width: 50px;
     height: 50px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .social-icon img {
