--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -19,13 +19,14 @@ body {
 header {
     background-color: #333;
     color: white;
-    padding: 1em; /* Modificato per essere uniforme */
+    padding: 1em;
     position: fixed;
     top: 0;
-    left: 0; /* Aggiunto per allineare a sinistra */
+    left: 0;
     width: 100%;
     z-index: 1000;
 }
+
 nav {
     display: flex;
     justify-content: center;
@@ -37,7 +38,7 @@ nav ul {
     margin: 0;
     padding: 0;
     display: flex;
-    margin-right: auto; /* Aggiunto per spostare il pulsante a destra */
+    margin-right: auto;
     animation: slideIn 1s ease-out;
 }
 
@@ -77,7 +78,7 @@ nav ul li a:hover::before {
     border-radius: 5px;
     font-weight: bold;
     transition: background-color 0.3s ease;
-    margin-left: auto; /* Aggiunto per spostare il pulsante a destra */
+    margin-left: auto;
     margin-right: 20px;
 }
 
@@ -104,7 +105,8 @@ main {
     font-weight: bold;
 }
 
-#contact form input, #contact form textarea {
+#contact form input,
+#contact form textarea {
     padding: 0.5rem;
     margin-top: 0.5rem;
     border: 1px solid #ccc;
@@ -133,6 +135,21 @@ footer {
     position: sticky;
     bottom: 0;
     width: 100%;
+}
+
+/* Hamburger Menu Styles */
+.hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.bar {
+    height: 3px;
+    width: 25px;
+    background-color: white;
+    margin: 3px 0;
+    transition: 0.3s;
 }
 
 @media (max-width: 1200px) {
@@ -172,6 +189,34 @@ footer {
 
     header, footer {
         padding: 0.5rem 0;
+    }
+
+    nav ul {
+        display: none; /* Nascondi i link per impostazione predefinita */
+        flex-direction: column; /* Cambia la direzione in colonna */
+        width: 100%;
+        background-color: #333; /* Sfondo per il menu a tendina */
+        position: absolute;
+        top: 60px; /* Posiziona sotto l'header */
+        left: 0;
+        z-index: 1000;
+    }
+
+    nav ul.active {
+        display: flex; /* Mostra i link quando attivo */
+    }
+
+    .hamburger {
+        display: flex; /* Mostra l'icona hamburger */
+        margin-left: auto; /* Sposta a destra */
+    }
+
+    nav {
+        justify-content: space-between; /* Distribuzione dello spazio */
+    }
+
+    nav ul li {
+        margin: 0; /* Rimuovi margini */
     }
 }
 
