--- a/assets/SCSS/portfolio.css
+++ b/assets/SCSS/portfolio.css
@@ -9,19 +9,20 @@ body {
   background-color: #FFC75E;
   padding: 20px;
 }
+
 @media screen and (max-width: 1200px) {
   body {
-    padding: 15px;
+      padding: 15px;
   }
 }
 @media screen and (max-width: 992px) {
   body {
-    padding: 10px;
+      padding: 10px;
   }
 }
 @media screen and (max-width: 768px) {
   body {
-    padding: 5px;
+      padding: 5px;
   }
 }
 
@@ -45,6 +46,7 @@ nav {
   justify-content: center;
   align-items: center;
 }
+
 nav ul {
   list-style: none;
   margin: 0;
@@ -53,15 +55,18 @@ nav ul {
   margin-right: auto;
   animation: slideIn 1s ease-out;
 }
+
 nav ul li {
   margin: 0 15px;
 }
+
 nav ul li a {
   color: white;
   text-decoration: none;
   font-weight: bold;
   position: relative;
 }
+
 nav ul li a::before {
   content: "";
   position: absolute;
@@ -73,6 +78,7 @@ nav ul li a::before {
   visibility: hidden;
   transition: all 0.3s ease-in-out;
 }
+
 nav ul li a:hover::before {
   visibility: visible;
   width: 100%;
@@ -125,17 +131,17 @@ p {
 }
 @media screen and (max-width: 992px) {
   p {
-    font-size: 18px;
+      font-size: 18px;
   }
 }
 @media screen and (max-width: 768px) {
   p {
-    font-size: 16px;
+      font-size: 16px;
   }
 }
 @media screen and (max-width: 576px) {
   p {
-    font-size: 14px;
+      font-size: 14px;
   }
 }
 
@@ -167,29 +173,74 @@ p {
 }
 @media screen and (max-width: 1200px) {
   .container .item .hotel-image img {
-    border-radius: 8px;
+      border-radius: 8px;
   }
 }
 @media screen and (max-width: 1200px) {
   .container {
-    gap: 15px;
-    padding: 15px;
+      gap: 15px;
+      padding: 15px;
   }
 }
 @media screen and (max-width: 992px) {
   .container {
-    gap: 10px;
-    padding: 10px;
+      gap: 10px;
+      padding: 10px;
   }
 }
 @media screen and (max-width: 768px) {
   .container {
-    gap: 5px;
-    padding: 5px;
+      gap: 5px;
+      padding: 5px;
   }
 }
 
 footer {
   text-align: center;
   margin-top: 20px;
+}
+
+/* Hamburger Menu Styles */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  height: 3px;
+  width: 25px;
+  background-color: white;
+  margin: 3px 0;
+  transition: 0.3s;
+}
+
+@media (max-width: 768px) {
+  nav ul {
+      display: none; /* Nascondi i link per impostazione predefinita */
+      flex-direction: column; /* Cambia la direzione in colonna */
+      width: 100%;
+      background-color: #333; /* Sfondo per il menu a tendina */
+      position: absolute;
+      top: 60px; /* Posiziona sotto l'header */
+      left: 0;
+      z-index: 1000;
+  }
+
+  nav ul.active {
+      display: flex; /* Mostra i link quando attivo */
+  }
+
+  .hamburger {
+      display: flex; /* Mostra l'icona hamburger */
+      margin-left: auto; /* Sposta a destra */
+  }
+
+  nav {
+      justify-content: space-between; /* Distribuzione dello spazio */
+  }
+
+  nav ul li {
+      margin: 0; /* Rimuovi margini */
+  }
 }
