--- a/assets/CSS/potfolio.css
+++ b/assets/CSS/potfolio.css
@@ -13,29 +13,22 @@ body {
 header {
     background-color: #333;
     color: white;
-    padding: 1em 0;
-    position: sticky;
+    padding: 1em;
+    position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     z-index: 1000;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-header h1.special-font {
-    font-family: "Roboto Slab", serif;
 }
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
 nav ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
     margin-right: auto;
     animation: slideIn 1s ease-out;
@@ -78,43 +71,18 @@ nav ul li a:hover::before {
     font-weight: bold;
     transition: background-color 0.3s ease;
     margin-left: auto;
+    margin-right: 20px;
 }
 
 .btn-download:hover {
     background-color: #ffab00; /* Changed hover color for contrast */
 }
 
-.social-links {
-    margin-top: 30px;
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-}
-
-.social-links ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-}
-
-.social-links ul li {
-    display: inline;
-}
-
-.social-links ul li a {
-    color: #FFC75E;
-    font-size: 30px;
-    transition: color 0.3s ease;
-}
-
-.social-links ul li a:hover {
-    color: #ffffff;
-}
-
-h1 {
-    margin-top: 20px;
+main h1.special-font {
+    font-family: "Roboto Slab", serif;
+    margin-top: 100px;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 p {
@@ -219,40 +187,33 @@ footer {
     }
 
     nav ul {
-        display: none; 
-        flex-direction: column;
+        display: none; /* Nasconde il menù */
+        flex-direction: column; /* Disposizione a colonna */
         width: 100%;
-        background-color: #333; 
+        background-color: #333;
         position: absolute;
-        top: 60px; 
+        top: 60px; /* Posizione sotto l'header */
         left: 0;
         z-index: 1000;
     }
 
     nav ul.active {
-        display: flex;
+        display: flex; /* Mostra il menù quando attivo */
     }
 
     .hamburger {
-        display: flex; 
-        margin-left: auto; 
-    }
-
-    nav {
-        justify-content: space-between; /* Distribute space */
+        display: flex;
+        margin-left: 20px; /* Distanza dal bordo sinistro */
     }
 
     nav ul li {
-        margin: 10px 0; /* Adjust margins */
+        padding: 10px; /* Padding per migliorare il clic */
+        text-align: left; /* Allineamento a sinistra */
     }
 }
 
 @media screen and (max-width: 576px) {
     p {
         font-size: 14px;
-    }
-
-    .social-links ul li a {
-        font-size: 24px; /* Smaller icons on small screens */
     }
 }
