--- a/assets/CSS/potfolio.css
+++ b/assets/CSS/potfolio.css
@@ -6,7 +6,10 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #FFC75E;
+    background-image: url("../img/sfondo_portfolio.png"); /* Specifica il percorso dell'immagine */
+    background-size: cover; /* Assicura che l'immagine copra l'intera area del body */
+    background-repeat: no-repeat; /* Evita che l'immagine venga ripetuta */
+    background-position: center; /* Centra l'immagine */
     padding: 20px;
 }
 
