--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding-top: 120px;
-    background-image: url("../img/banner.png");
+    background-image: url("../img/sfondo_contact.png");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
